--- a/PickWaves.html
+++ b/PickWaves.html
@@ -76,7 +76,7 @@
 
 var X = XLSX;
 var dateTime = new Date();
-var today = String(dateTime.getFullYear()) + "-" + String(dateTime.getMonth()) +"-" + String(dateTime.getDate());
+var today = String(dateTime.getFullYear()) + "-" + String(dateTime.getMonth()+1) +"-" + String(dateTime.getDate());
 var global_wb;
 var ArrayWaves;
 var PickWaves;
